Bottom Nav, New XML, etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,23 @@
 <resources>
     <string name="app_name">MadChef</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="api_key">cc9572956d96444f918701803bfbeda2</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appliance_tool"><![CDATA[Appliance & Tool]]></string>
+    <string-array name="tags">
+        <item>main course</item>
+        <item>side dish</item>
+        <item>dessert</item>
+        <item>appetizer</item>
+        <item>salad</item>
+        <item>bread</item>
+        <item>breakfast</item>
+        <item>soup</item>
+        <item>beverage</item>
+        <item>sauce</item>
+        <item>marinade</item>
+        <item>fingerfood</item>
+        <item>snack</item>
+        <item>drink</item>
+    </string-array>
 </resources>
