--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <resources>
     <string name="app_name">MadChef</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="api_Key">e0cbb82ea5f74842b037886471770d04</string>
+    <string name="api_Key">c19deda405404cd798c0b3d92e6a3c0d</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appliance_tool"><![CDATA[Appliance & Tool]]></string>
     <string-array name="tags">
-        <item>main course</item>
-        <item>side dish</item>
-        <item>dessert</item>
-        <item>appetizer</item>
-        <item>salad</item>
-        <item>bread</item>
-        <item>breakfast</item>
-        <item>soup</item>
-        <item>beverage</item>
-        <item>sauce</item>
-        <item>marinade</item>
-        <item>fingerfood</item>
-        <item>snack</item>
-        <item>drink</item>
+        <item>Main course</item>
+        <item>Side dish</item>
+        <item>Dessert</item>
+        <item>Appetizer</item>
+        <item>Salad</item>
+        <item>Bread</item>
+        <item>Breakfast</item>
+        <item>Soup</item>
+        <item>Beverage</item>
+        <item>Sauce</item>
+        <item>Marinade</item>
+        <item>Fingerfood</item>
+        <item>Snack</item>
+        <item>Drink</item>
     </string-array>
 </resources>
